# sp500-historical-portfolio-returns

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
.claude/agents/: test-runner.md
data/: SP500.tab  interest.tab
notebooks/: scratch.ipynb
returns/: data.py  models.py
tests/: test_analysis.py  test_data.py  test_insurance_class.py  test_monthly_returns.py
trading_strategies_report/: index.html  recent_returns.html
trading_strategies_report/css/: style.css
trading_strategies_report/js/: app.js  charts.js  recent_returns_app.js
trading_strategies_report/strategies/: buy-hold.html  insurance.html  kelly.html  strategies.css
